make sure no files are hidden by the play bar on Playback UI

--- a/static/styles/playback.css
+++ b/static/styles/playback.css
@@ -1,6 +1,7 @@
 ﻿#playbackPanel {
     position:relative;
     padding: 20px;
+    margin-bottom: 150px;
 }
 
 .buttonPanel {
@@ -10,6 +11,7 @@
     width: 100%;
     background-color: #31262F;
     border-top: 4px solid #978BAD;
+    opacity: 0.9;
 }
 
 .videoList
